--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="KNOWER LIFE - искусственный интеллект нового поколения для глубокого и осмысленного взаимодействия. Попробуйте Grok 3 бесплатно!">
-    <meta name="keywords" content="KNOWER LIFE, искусственный интеллект, AI, Grok 3, интеллектуальный помощник">
+    <meta name="description" content="KNOWER LIFE - искусственный интеллект нового поколения для глубокого и осмысленного взаимодействия. ">
+    <meta name="keywords" content="KNOWER LIFE, искусственный интеллект, AI, интеллектуальный помощник">
     <title>KNOWER LIFE - Искусственный интеллект нового поколения</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="preload" href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
@@ -67,7 +67,7 @@
                 "name": "Как начать использовать KNOWER LIFE?",
                 "acceptedAnswer": {
                     "@type": "Answer",
-                    "text": "Просто заполните форму обратной связи или попробуйте Grok 3 бесплатно на grok.com."
+                    "text": "Просто заполните форму обратной связи."
                 }
             }
         ]
@@ -1680,8 +1680,8 @@
             <div class="timeline">
                 <div class="timeline-item" style="--i: 1">
                     <div class="timeline-content left">
-                        <h3>2023: Запуск Grok 3</h3>
-                        <p>Интеграция с Grok 3 от xAI для расширенных возможностей ИИ.</p>
+                        <h3>2023: Запуск KNOWER LIFE</h3>
+                        <p>Интеграция с KNOWER LIFE от xAI для расширенных возможностей ИИ.</p>
                         <div class="timeline-dot"></div>
                     </div>
                 </div>
@@ -1919,7 +1919,7 @@
                 </div>
 <!--
                 <div class="faq-answer">
-                    Просто заполните форму обратной связи или попробуйте Grok 3 бесплатно на <a href="https://x.ai/grok">grok.com</a>.
+                    Просто заполните форму обратной связи.
                 </div>
 -->
             </div>
