--- a/index.html
+++ b/index.html
@@ -2170,7 +2170,7 @@
                 </div>
             </div>
             <div class="copyright">
-                <p>© KNOWER LIFE 2025. Все права защищены. Заряжено Битрикс 24.</p>
+                <p>© KNOWER LIFE 2025. Все права защищены.</p>
             </div>
         </div>
     </footer>
