--- a/index.html
+++ b/index.html
@@ -1680,7 +1680,7 @@
                 <div class="timeline-item" style="--i: 1">
                     <div class="timeline-content left">
                         <h3>2023: Запуск KNOWER LIFE</h3>
-                        <p>Интеграция с KNOWER LIFE от xAI для расширенных возможностей ИИ.</p>
+                        <p>Интеграция с KNOWER LIFE для расширенных возможностей ИИ.</p>
                         <div class="timeline-dot"></div>
                     </div>
                 </div>
@@ -1947,7 +1947,7 @@
                 <div class="card" style="--i: 3">
                     <i class="fas fa-bolt card-icon"></i>
                     <h3>Молниеносная скорость</h3>
-                    <p>Получайте результаты мгновенно благодаря оптимизированной архитектуре, разработанной xAI.</p>
+                    <p>Получайте результаты мгновенно благодаря оптимизированной архитектуре.</p>
                 </div>
             </div>
         </div>
